--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/slick-carousel": "^1.6.34",
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
     "underscore": "^1.13.1",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.0.0-0",
+    "vue-slick": "^1.1.16"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.5",
